FIX: better search alignment

--- a/client/src/scss/types/linkfield.scss
+++ b/client/src/scss/types/linkfield.scss
@@ -1,8 +1,11 @@
 .linkfield-dialog {
-    .btn.action {
-        box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
-        &:active {
-            box-shadow: inset 0 3px 5px rgba(0,0,0,.5);
-        }
+  .btn.action {
+    &::before {
+      content: "O" !important;
     }
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    &:active {
+      box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.5);
+    }
+  }
 }
